--- a/style.scss
+++ b/style.scss
@@ -113,6 +113,7 @@ body {
 .hope-c-mHASU-kukbfD-variant-outline,
 .hope-c-PJLV-ihVEsOa-css,
 .hope-c-gIqhpo,
+.hope-c-PJLV-idMNcPR-css,
 // 登录页面
 .hope-c-PJLV-ibcBsNO-css .hope-c-PJLV-iubUra-css,
 .hope-c-PJLV-ibcBsNO-css .hope-c-PJLV-ifjOQLV-css {
