修复搜索按钮样式颜色问题

--- a/style.scss
+++ b/style.scss
@@ -92,7 +92,7 @@ body {
 .hope-c-hOYTCS,
 .hope-c-PJLV-idaeksS-css,
 .hope-c-PJLV-ieTGfmR-css,
-.hope-c-PJLV-ijMezfq-css,
+.header-right.hope-stack>div,
 .hope-c-PJLV-ijgzmFG-css,
 .hope-c-PJLV-ikJQsXT-css,
 .hope-c-zbPwS,
@@ -126,7 +126,7 @@ body {
 }
 
 /* 首页搜索按钮 */
-.hope-c-PJLV-ijMezfq-css {
+.header-right.hope-stack>div {
   height: var(--hope-sizes-8);
   border: none !important;
   padding: var(--hope-space-1) var(--hope-space-2) !important;
