添加左侧边栏玻璃样式

--- a/style.scss
+++ b/style.scss
@@ -114,6 +114,9 @@ body {
 .hope-c-PJLV-ihVEsOa-css,
 .hope-c-gIqhpo,
 .hope-c-PJLV-idMNcPR-css,
+// 左侧边栏
+.hope-c-PJLV-ieGWMbI-css,
+.hope-c-PJLV-iZZmce-css,
 // 登录页面
 .hope-c-PJLV-ibcBsNO-css .hope-c-PJLV-iubUra-css,
 .hope-c-PJLV-ibcBsNO-css .hope-c-PJLV-ifjOQLV-css {
